// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Configuration snapshot > application.json 1`] = `
{
  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
  "description": "Default configuration for an application",
  "extends": [
    "github>captive-studio/renovate-config:recommended",
  ],
}
`;

exports[`Configuration snapshot > applicationLegacy.json 1`] = `
{
  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
  "description": "Default configuration for a legacy application. No automerge is done and concurrency is limited",
  "extends": [
    "github>captive-studio/renovate-config:base",
    "github>captive-studio/renovate-config//preset/groupRecommended",
    ":pinDevDependencies",
  ],
  "prConcurrentLimit": 10,
}
`;

exports[`Configuration snapshot > base.json 1`] = `
{
  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
  "assigneesFromCodeOwners": false,
  "dependencyDashboard": true,
  "description": "Default base configuration for all Captive projects.",
  "extends": [
    "github>w5s/renovate-config:_base",
    "github>captive-studio/renovate-config//preset/commit",
    "github>captive-studio/renovate-config//preset/schedule",
    "github>captive-studio/renovate-config//preset/automergeBase",
    "github>captive-studio/renovate-config//preset/ghcr",
    ":separateMultipleMajorReleases",
    ":separateMultipleMinorReleases",
    ":pinAllExceptPeerDependencies",
    "workarounds:all",
  ],
  "internalChecksAsSuccess": true,
  "onboarding": false,
  "packageRules": [
    {
      "matchDepTypes": [
        "dependencies",
      ],
      "matchUpdateTypes": [
        "major",
      ],
      "minimumReleaseAge": "7 days",
    },
    {
      "matchDepTypes": [
        "dependencies",
      ],
      "matchUpdateTypes": [
        "minor",
      ],
      "minimumReleaseAge": "2 days",
    },
    {
      "matchDepTypes": [
        "dependencies",
      ],
      "matchUpdateTypes": [
        "patch",
      ],
      "minimumReleaseAge": "2 days",
    },
  ],
  "platformAutomerge": true,
  "prConcurrentLimit": 5,
  "prHourlyLimit": 0,
  "updateNotScheduled": true,
}
`;

exports[`Configuration snapshot > library.json 1`] = `
{
  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
  "description": "Default configuration for a library",
  "extends": [
    "github>captive-studio/renovate-config:recommended",
    ":pinOnlyDevDependencies",
  ],
}
`;
